[#3688] Do not use a table for configuration form, add toggle for JSON Schema

--- a/src/openforms/js/components/admin/form_design/registrations/objectsapi/ObjectsApiOptionsFormFields.mdx
+++ b/src/openforms/js/components/admin/form_design/registrations/objectsapi/ObjectsApiOptionsFormFields.mdx
@@ -8,7 +8,9 @@ import * as ObjectsApiOptionsFormFieldsStories from './ObjectsApiOptionsFormFiel
 # Objects API Registration
 
 Here we can set up the registration backend for Objects APIs. The Objecttype and corresponding
-versions are fetched from the API.
+versions are fetched from the API. When using the _Variables Mapping_ configuration mode, the
+mapping between variables and Objecttype targets is configured in the
+[_Variables_ tab](/story/form-design-variables-editor--with-objects-api-registration-backends).
 
 <Canvas of={ObjectsApiOptionsFormFieldsStories.Default} />
 
