--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -1587,6 +1587,11 @@
     "description": "JSON editor: complex value representation",
     "originalDefault": "(complex value)"
   },
+  "cK2O6E": {
+    "defaultMessage": "Something went wrong when fetching the available target paths",
+    "description": "Objects API variable registration configuration API error",
+    "originalDefault": "Something went wrong when fetching the available target paths"
+  },
   "cUVVbl": {
     "defaultMessage": "is groter dan of gelijk aan",
     "description": "\">=\" operator description",
