:fire: [#4000] Delete the 'save and add another' button
Checked that this was not used in other screens - all other SubmitRow
usage explicitly specifies the children so this button is effectively
unused.

--- a/src/openforms/js/components/admin/forms/ActionButton.mdx
+++ b/src/openforms/js/components/admin/forms/ActionButton.mdx
@@ -1,6 +1,6 @@
 import {ArgTypes, Canvas, Meta} from '@storybook/addon-docs';
 
-import {ActionButton, AddAnotherAction, ContinueEditingAction, SubmitAction} from './ActionButton';
+import {ActionButton, ContinueEditingAction, SubmitAction} from './ActionButton';
 import * as ActionButtonStories from './ActionButton.stories';
 
 <Meta of={ActionButtonStories} />
@@ -20,10 +20,6 @@ The default Django admin action buttons
 ### Submit
 
 <Canvas of={ActionButtonStories.SubmitActionStory} />
-
-### Save and add another
-
-<Canvas of={ActionButtonStories.AddAnotherActionStory} />
 
 ### Save and edit
 
